--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -10,11 +10,10 @@
         <!-- Banner -->
         <section id="banner">
             <div class="inner">
-                <h2>This is Ion</h2>
-                <p>A free responsive template by <a href="http://templated.co">TEMPLATED</a></p>
+                <h2>I am Jeff Gordon</h2>
+                <p>A designer of print and web graphics. Welcome to my world.</p>
                 <ul class="actions">
-                    <li><a href="#content" class="button big special">Sign Up</a></li>
-                    <li><a href="#elements" class="button big alt">Learn More</a></li>
+                    <li><a href="#elements" class="button big alt">Contact Me</a></li>
                 </ul>
             </div>
         </section>
