--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
         {% include /header.html %}
 
         {{ content }}
+        
+        {% include /portfoliogallery.html %}
 
         {% include /footer.html %}
 
