--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -18,6 +18,9 @@
             </div>
         </section>
         {{ content }}
+        
+        {% include /portfoliogallery.html %}
+        
         {% include /footer.html %}
 
     </body>
